# eventify

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml
backend/: .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
backend/src/: db.sqlite3  manage.py
backend/src/eventfy/: asgi.py  docs.py  settings.py  urls.py  wsgi.py
backend/src/events/: admin.py  middlewares.py  models.py  permissions.py  urls.py  views.py
backend/src/events/api/: serializers.py  urls.py  views.py
backend/src/events/migrations/: 0001_initial.py  0002_initial.py  0003_event_date.py  0004_savedevent.py  0005_event_category.py
backend/src/template/email/: ticket_receipt.html  ticket_receipt.txt
backend/src/templates/emails/: ticket_receipt.html  ticket_receipt.txt
backend/src/users/: admin.py  models.py  permissions.py  urls.py
backend/src/users/api/: serializers.py  views.py
backend/src/users/migrations/: 0001_initial.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: EventCard.vue  Footer.vue  Header.vue  HeartIcon.vue
frontend/src/router/: index.js
frontend/src/stores/: userStore.js
frontend/src/utils/: axiosConfig.js
frontend/src/views/: Homeview.vue  SavedEventsView.vue
